# VoiceAI

./: .gitignore  setup.bat  setup.ps1  setup.sh
.github/workflows/: release.yml  test-windows-setup.yml
backend/: audio_post.py  download_kokoro.py  download_model.py  enhance.py  f5_worker.py  generate.py  input.txt  requirements.txt  test.py  train_voice.py  trim.py  voices.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
scripts/: install.sh  mac_install.command
windows-poc/: README.md
windows-poc/engine/: bench_providers.py  requirements.txt
